<resources>
    <string name="app__name">Progress</string>

    <string name="app_theme__space">Space</string>
    <string name="app_theme__mint">Mint</string>
    <string name="app_theme__sky">Sky</string>
    <string name="app_theme__cherry">Cherry</string>

    <string name="global__day">Day</string>
    <string name="global__week">Week</string>
    <string name="global__month">Month</string>
    <string name="global__year">Year</string>
    <string name="global__settings">Settings</string>

    <string name="main__percentages">%s\%%</string>

    <string name="settings__ui_category">User interface</string>
    <string name="settings__app_theme">App theme</string>
    <string name="settings__about_category">About</string>
    <string name="settings__app_version_description">Version: %s</string>
    <string name="settings__rate_app">Rate the app</string>
    <string name="settings__rate_app_description">Share your feedback in Google Play</string>
</resources>
